--- a/.github/workflows/checkupdates4.yml
+++ b/.github/workflows/checkupdates4.yml
@@ -1,8 +1,8 @@
 name: Grouped NVCHECKER Updates
 on:
   schedule:
-    - cron: '0 */12 * * *'  # Runs every 12 hours
-  workflow_dispatch:  # Allows manual triggering
+    - cron: "0 */12 * * *" # Runs every 12 hours
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   arch-task:
@@ -11,10 +11,10 @@ jobs:
       image: archlinux:latest
       options: --privileged # Required for system-level changes like useradd, pacman
     env:
-        AUR_MAINTAINER_NAME: envolution
-        GIT_USERNAME: envolution
-        GIT_EMAIL: involution@gmail.com
-        ACTIONS_STEP_SUMMARY: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}#step:${{ github.job }}:markdown-summary
+      AUR_MAINTAINER_NAME: envolution
+      GIT_USERNAME: envolution
+      GIT_EMAIL: involution@gmail.com
+      ACTIONS_STEP_SUMMARY: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}#step:${{ github.job }}:markdown-summary
 
     steps:
       - name: Checkout repository
@@ -22,20 +22,20 @@ jobs:
 
       - name: Initialize pacman keyring and update system
         run: |
-          set -e 
+          set -e
           echo "::group::Initialize pacman and Update System"
           echo "Initializing pacman keyring..."
           mkdir -p /etc/pacman.d/gnupg
           pacman-key --init
           pacman-key --populate archlinux
-          
+
           echo "Enabling multilib repository..."
           echo -e "\n[multilib]\nInclude = /etc/pacman.d/mirrorlist" >> /etc/pacman.conf
-          
+
           echo "Updating system and installing core dependencies..."
-          pacman -Sy --noconfirm --needed archlinux-keyring 
-          pacman -Syu --noconfirm 
-          
+          pacman -Sy --noconfirm --needed archlinux-keyring
+          pacman -Syu --noconfirm
+
           echo "Installing necessary packages..."
           pacman -S --noconfirm --needed \
             git base-devel pacman-contrib openssh github-cli jq expac \
@@ -44,7 +44,7 @@ jobs:
             pyalpm python-awesomeversion python-packaging python-lxml \
             python-gobject python-requests libnotify nvchecker \
             binutils multilib-devel python-aiohttp clang python-jq \
-            sudo 
+            sudo
           echo "::endgroup::"
 
       - name: Setup non-root user for AUR operations
@@ -53,12 +53,12 @@ jobs:
           set -e
           echo "::group::Setup non-root user 'builder'"
           echo "Creating build user 'builder'..."
-          useradd -m -s /bin/bash builder 
+          useradd -m -s /bin/bash builder
           echo "builder ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/builder
           chmod 0440 /etc/sudoers.d/builder
 
           echo "Setting up directories for builder..."
-          install -d -o builder -g builder -m 700 /home/builder/.gnupg 
+          install -d -o builder -g builder -m 700 /home/builder/.gnupg
           install -d -o builder -g builder -m 755 /home/builder/.cache
           install -d -o builder -g builder -m 755 /home/builder/.local
           install -d -o builder -g builder -m 755 /home/builder/.local/share
@@ -80,7 +80,7 @@ jobs:
 
           echo "Configuring paru..."
           echo -e "[options]\nBatchInstall\nBottomUp\nRemoveMake\nSudoLoop\nUseAsk" | sudo tee /etc/paru.conf > /dev/null
-          
+
           echo "Paru installation and configuration complete."
           echo "::endgroup::"
 
@@ -92,20 +92,20 @@ jobs:
           SSH_DIR="/home/builder/.ssh"
           mkdir -p "${SSH_DIR}"
           echo "${{ secrets.AUR_SSH_PRIVATE_KEY }}" > "${SSH_DIR}/aur"
-          
+
           ssh-keyscan aur.archlinux.org >> "${SSH_DIR}/known_hosts"
-          
+
           echo "Host aur.archlinux.org" >> "${SSH_DIR}/config"
           echo "  IdentityFile ${SSH_DIR}/aur" >> "${SSH_DIR}/config"
-          echo "  User aur" >> "${SSH_DIR}/config" 
+          echo "  User aur" >> "${SSH_DIR}/config"
           echo "  StrictHostKeyChecking yes" >> "${SSH_DIR}/config"
 
           chown -R builder:builder "${SSH_DIR}"
           chmod 700 "${SSH_DIR}"
           chmod 600 "${SSH_DIR}/aur"
-          chmod 600 "${SSH_DIR}/config" 
+          chmod 600 "${SSH_DIR}/config"
           chmod 644 "${SSH_DIR}/known_hosts"
-          
+
           echo "SSH key setup complete. Permissions:"
           ls -ldn "${SSH_DIR}" "${SSH_DIR}/aur" "${SSH_DIR}/config" "${SSH_DIR}/known_hosts" # Use -n to show numeric UID/GID
           echo "::endgroup::"
@@ -130,17 +130,17 @@ jobs:
           SECRET_GHUK_VALUE: ${{ secrets.GHuK }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_RUNID: ${{ github.runid }}
-          ACTIONS_STEP_DEBUG: "true"
+          ACTIONS_STEP_DEBUG: true
         run: |
           echo "::notice::Attempting to execute external script main_task_script.py"
           # Ensure the script is executable inside the container if permissions were lost
           mkdir -p task
           cp ${GITHUB_WORKSPACE}/scripts/main_task_script.py task/
-          chmod +x task/main_task_script.py 
+          chmod +x task/main_task_script.py
           #get version checker dependency
           echo "::notice::Pulling python-looseversion package from aur"
           sudo -u builder paru -S python-looseversion --noconfirm
-          python3 ./task/main_task_script.py 
+          python3 ./task/main_task_script.py
 
       - name: Upload build logs and artifacts
         if: always()
