remove old references

--- a/abandoned/autotrace-git/.nvchecker.toml
+++ b/abandoned/autotrace-git/.nvchecker.toml
@@ -1,5 +1,5 @@
 [autotrace-git]
-source="github-graphql"
+source="github"
 github="autotrace/autotrace"
 use_latest_release=true
 use_commit_number=true
