--- a/abandoned/aircrack-ng-git/.nvchecker.toml
+++ b/abandoned/aircrack-ng-git/.nvchecker.toml
@@ -1,5 +1,5 @@
 [aircrack-ng-git]
-source="github-graphql"
+source="github"
 github="aircrack-ng/aircrack-ng"
 use_latest_release=true
 use_commit_number=true
