--- a/abandoned/blueproximity-py3-git/.nvchecker.toml
+++ b/abandoned/blueproximity-py3-git/.nvchecker.toml
@@ -1,5 +1,5 @@
 [blueproximity-py3-git]
-source="github-graphql"
+source="github"
 github="tiktaalik-dev/blueproximity"
 use_max_tag=true
 prefix='v'
