--- a/abandoned/gnome-session-git/.nvchecker.toml
+++ b/abandoned/gnome-session-git/.nvchecker.toml
@@ -1,5 +1,5 @@
 [gnome-session-git]
-source="github-graphql"
+source="github"
 github="GNOME/gnome-session"
 use_max_tag=true
 use_commit_number=true
