--- a/abandoned/goxel-voxel-editor-git/.nvchecker.toml
+++ b/abandoned/goxel-voxel-editor-git/.nvchecker.toml
@@ -1,5 +1,5 @@
 [goxel-voxel-editor-git]
-source="github-graphql"
+source="github"
 github="guillaumechereau/goxel"
 use_latest_release=true
 prefix="v"
