--- a/abandoned/gsettings-desktop-schemas-git/.nvchecker.toml
+++ b/abandoned/gsettings-desktop-schemas-git/.nvchecker.toml
@@ -1,5 +1,5 @@
 [gsettings-desktop-schemas-git]
-source="github-graphql"
+source="github"
 github="GNOME/gsettings-desktop-schemas"
 use_max_tag=true
 use_commit_number=true
