--- a/abandoned/python-markitdown-git/.nvchecker.toml
+++ b/abandoned/python-markitdown-git/.nvchecker.toml
@@ -1,5 +1,5 @@
 [python-markitdown-git]
-source="github-graphql"
+source="github"
 github="microsoft/markitdown"
 use_commit_clean=true
 use_commit_number=true
