--- a/abandoned/slade-git/.nvchecker.toml
+++ b/abandoned/slade-git/.nvchecker.toml
@@ -1,5 +1,5 @@
 [slade-git]
-source="github-graphql"
+source="github"
 github="sirjuddington/SLADE"
 use_latest_release=true
 use_commit_number=true
