--- a/abandoned/spotx-git/.nvchecker.toml
+++ b/abandoned/spotx-git/.nvchecker.toml
@@ -1,5 +1,5 @@
 [spotx-git]
-source="github-graphql"
+source="github"
 github="SpotX-Official/SpotX-Bash"
 use_commit_clean=true
 use_commit_number=true
