--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -113,11 +113,12 @@ jobs:
 
           echo "Paru installation and configuration complete."
           echo "::endgroup::"
-          sudo pacman -U https://github.com/envolution/aur/releases/download/folly/folly-2025.07.07.00-1-x86_64.pkg.tar.zst
-          sudo pacman -U https://github.com/envolution/aur/releases/download/fizz/fizz-2025.07.07.00-1-x86_64.pkg.tar.zst
-          sudo pacman -U https://github.com/envolution/aur/releases/download/wangle/wangle-2025.07.07.00-1-x86_64.pkg.tar.zst
-          sudo pacman -U https://github.com/envolution/aur/releases/download/fbthrift/fbthrift-2025.07.07.00-1-x86_64.pkg.tar.zst
-          sudo pacman -U https://github.com/envolution/aur/releases/download/fb303/fb303-2025.07.07.00-1-x86_64.pkg.tar.zst
+          wget https://github.com/envolution/aur/releases/download/folly/folly-2025.07.07.00-1-x86_64.pkg.tar.zst
+          wget https://github.com/envolution/aur/releases/download/fizz/fizz-2025.07.07.00-1-x86_64.pkg.tar.zst
+          wget https://github.com/envolution/aur/releases/download/wangle/wangle-2025.07.07.00-1-x86_64.pkg.tar.zst
+          wget https://github.com/envolution/aur/releases/download/fbthrift/fbthrift-2025.07.07.00-1-x86_64.pkg.tar.zst
+          wget https://github.com/envolution/aur/releases/download/fb303/fb303-2025.07.07.00-1-x86_64.pkg.tar.zst
+          sudo pacman -U *zst && rm -f *zst
 
       - name: Setup SSH key for AUR
         run: |
