--- a/abandoned/openfoam-13/PKGBUILD
+++ b/abandoned/openfoam-13/PKGBUILD
@@ -52,7 +52,7 @@ source=(
 )
 install="${pkgbase}.install"
 md5sums=('755f7378718648d81d7a34b98a5b7efc'
-  'e93ff7ff9b92b01216c41164c09caa48')
+         'd4d111c234ec5f120d8a58f70f69d4ae')
 
 _cache_notify() {
   local yellow='\033[1;33m'
@@ -74,10 +74,6 @@ prepare() {
     mv $_gitname-$_subver $_distpkgbase-$_pkgver
 
     _bashrc=${_distpkgbase}-${_pkgver}/etc/bashrc
-    sed -i 's/export SCOTCH_TYPE=.*/export SCOTCH_TYPE=system/' $_bashrc
-    sed -i 's/export METIS_TYPE=.*/export METIS_TYPE=system/' $_bashrc
-    sed -i 's/export PARMETIS_TYPE=.*/export PARMETIS_TYPE=system/' $_bashrc
-    sed -i 's/export ZOLTAN_TYPE=.*/export ZOLTAN_TYPE=system/' $_bashrc
     sed -i 's|^export WM_PROJECT_VERSION=.*|export WM_PROJECT_VERSION=13|' $_bashrc
     cp ${_bashrc} ${_bashrc}.prepared
 
@@ -86,6 +82,18 @@ prepare() {
     sed -i 's|^# export FOAM_INST_DIR=.*|export FOAM_INST_DIR=/opt/\$WM_PROJECT|' \
       ${_bashrc}.prepared
 
+    # Add system library settings to prefs.sh
+    cat <<EOF >"${_distpkgbase}-${_pkgver}/etc/prefs.sh"
+# System-wide settings for Arch Linux
+export SCOTCH_TYPE=system
+export METIS_TYPE=system
+export PARMETIS_TYPE=system
+export ZOLTAN_TYPE=system
+EOF
+
+    # Add VTK include path to CXXFLAGS in the main settings file
+    sed -i "s|export WM_CXXFLAGS='-m64 -fPIC -std=c++0x'|export WM_CXXFLAGS='-m64 -fPIC -std=c++0x -I/usr/include/vtk'|" \
+        "${_distpkgbase}-${_pkgver}/etc/config.sh/settings"
 
     echo $pkgver >$_cachefile
   fi
@@ -97,6 +105,8 @@ prepare() {
 build() {
   cd ${_distpkgbase}-${_pkgver}
 
+  export FOAM_VERBOSE=1
+  export PS1='~' # required for verbosity checks
   # Setup the build environment
   source etc/bashrc || true
 
