--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -116,7 +116,7 @@ jobs:
           sudo -u builder git clone https://aur.archlinux.org/paru-git.git
           cd paru-git
           # Paru will use MAKEFLAGS from /etc/makepkg.conf if not overridden by user config
-          sudo -u builder makepkg -si --noconfirm
+          sudo -u builder RUST_MIN_STACK=16777216 makepkg -si --noconfirm
 
           echo "Configuring paru..."
           echo -e "[options]\nBatchInstall\nBottomUp\nRemoveMake\nSudoLoop\nUseAsk" | sudo tee /etc/paru.conf > /dev/null
